--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -24,6 +24,7 @@
                 <option value="News" <%= post.category === 'News' ? 'selected' : '' %>>News</option>
                 <option value="Discussion" <%= post.category === 'Discussion' ? 'selected' : '' %>>Discussion</option>
                 <option value="Announcement" <%= post.category === 'Announcement' ? 'selected' : '' %>>Announcement</option>
+                <option value="Technical" <%= post.category === 'Technical' ? 'selected' : '' %>>Technical</option>
             </select>
             
         <label for="content">Content</label>
